@@ -1,6 +1,10 @@
 sysvinit (2.89dsf) UNRELEASED; urgency=low
 
   [ Werner Fink ]
+  * Allow init to delte extra environment variables (was local bug
+    #35858)
+  * Avoid that init double environment variables for its childs
+    (was local bug #35855)
   * Remove man-db tag for encoding for canonical man
   * Sulogin: try to detect the real device(s) used for the system console
     /dev/console if but only if /dev/console is used.  On Linux this can
